# amm-trading-bot

./: .gitignore  Cargo.toml  README.md
config/1/: allTokens.json  pools.json
config/137/: README.md  pools.json  tokens.json
config/univ3/: README.md
src/: arbitrage.rs  graph.rs  main.rs  univ3.rs  utils.rs
src/univ3/: factory.rs  mod.rs  pool.rs  tokens.rs
src/univ3/data/: uniswapV3Tokens.json
src/utils/: mod.rs  univ3.rs
tests/: arbitrage.rs
