[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "0.17.0"
serde_json = "1.0.83"
serde = "1.0.144"
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15.0"
rust-crypto = "0.2.36"